# swagger_gen/models/action_reply_g_rpc.go
@@ -1,0 +1,46 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ActionReplyGRPC reply to incoming GRPC that triggered this behavior with a response
+//
+// swagger:model ActionReplyGRPC
+type ActionReplyGRPC struct {
+
+	// string payload to send via GRPC, this should be a json string that maps to the protobuf response object
+	Payload string `json:"payload,omitempty"`
+
+	// file path (relative to OPENMOCK_TEMPLATES_DIR of OM) to load payload from, this should be a json string that maps to the protobuf response object
+	PayloadFromFile string `json:"payload_from_file,omitempty"`
+}
+
+// Validate validates this action reply g RPC
+func (m *ActionReplyGRPC) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ActionReplyGRPC) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ActionReplyGRPC) UnmarshalBinary(b []byte) error {
+	var res ActionReplyGRPC
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
